refactor(Controller): using facades and changing route order
